--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/projeto2spring
 spring.datasource.username=postgres
-spring.datasource.password=laliluty
+spring.datasource.password=banco123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
